--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+@import '../node_modules/webfullstack-design-system/src/lib/scss/variables.scss';
+
+
+html , body {
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  background-color: $info-color;
+  color : $tertiary-color;
+}
