--- a/src/app/views/auth/login/login.component.html
+++ b/src/app/views/auth/login/login.component.html
@@ -1,2 +1,5 @@
-<p>login works!</p>
-<lib-button></lib-button>
+<flex-div alignItems="center" justifyContent="center">
+  <lib-card title="Connexion" color="raisin" borderRadius="10" elevation="md" padding="md" sense="row" width="20em" align="center" justify="center">
+    <lib-form [fields]="formData" (submit)="onSubmit($event)" ></lib-form>
+  </lib-card>
+</flex-div>
