[WIP architecture] : architecture lazy-loading

--- a/src/app/views/crypto/crypto-card/crypto-card.component.html
+++ b/src/app/views/crypto/crypto-card/crypto-card.component.html
@@ -6,7 +6,7 @@
     [fullWidth]="true"
   >
     <flex-div alignItems="center">
-      <img [src]="crypto.img" class="crypto-card__img" />
+      <img [src]="crypto.img" alt="bitcoin" class="crypto-card__img" />
       <flex-div direction="column">
         <p>{{ crypto.name }}</p>
         <p>{{ crypto.abbreviation }}</p>
