--- a/src/app/views/auth/login/login.component.html
+++ b/src/app/views/auth/login/login.component.html
@@ -1,5 +1,15 @@
-<flex-div alignItems="center" justifyContent="center">
-  <lib-card title="Connexion" color="raisin" borderRadius="10" elevation="md" padding="md" sense="row" width="20em" align="center" justify="center">
-    <lib-form [fields]="formData" (submit)="onSubmit($event)" ></lib-form>
+<flex-div alignItems="center" justifyContent="center" [fullHeight]="true">
+  <lib-card title="Connexion" color="raisin" borderRadius="10" elevation="md" padding="md" sense="row" width="31.25rem" align="center" justify="center">
+    <lib-form [fields]="formData" (submit)="onSubmit($event)"></lib-form>
   </lib-card>
 </flex-div>
+
+<snackbar
+  [message]="toastConfig.message"
+  [open]="toastConfig.open"
+  [autoHideDuration]="toastConfig.duration"
+  [backgroundColor]="toastConfig.color"
+  [autoHideDuration]="toastConfig.duration"
+  (autoHideEvent)="onHideToast()"
+>
+</snackbar>
