création du store cryptos / page de détail crypto

--- a/src/app/views/crypto/components/crypto-card/crypto-card.component.html
+++ b/src/app/views/crypto/components/crypto-card/crypto-card.component.html
@@ -4,9 +4,10 @@
       justifyContent="space-between"
       class="crypto-card__content"
       [fullWidth]="true"
+      (click)="clickLine()"
     >
       <flex-div alignItems="center">
-        <img [src]="crypto.img" alt="bitcoin" class="crypto-card__img" />
+        <img [src]="crypto.image" alt="bitcoin" class="crypto-card__img" />
         <flex-div direction="column">
           <p>{{ crypto.name }}</p>
           <p>{{ crypto.abbreviation }}</p>
