feat/home : fix crypto div

--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,4 +1,4 @@
-<flex-div class="home__wrapper" direction="column" alignItems="center" justifyContent="center" [fullWidth]="true" >
+<flex-div class="home__wrapper" direction="column" alignItems="center" justifyContent="center">
   <flex-div>
     <lib-card>
       <flex-div alignItems="center" direction="column">
