--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,5 @@
-<flex-div class="header">
+<div class="header">
   <flex-div alignItems="center" justifyContent="space-between">
-    <!-- //TODO: conditionner une fois le store dispo -->
     <flex-div class="header__logo">Crypto</flex-div>
     <flex-div justifyContent="space-around" *ngIf="isAuthenticated">
       <a routerLink="/home" class="header__links" routerLinkActive="header__links--active">Home</a>
@@ -14,4 +13,4 @@
       <a *ngIf="isAuthenticated" class="header__links" (click)="handleDisconnectUser()">Déconnexion</a>
     </flex-div>
   </flex-div>
-</flex-div>
+</div>
