--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,15 +3,53 @@
     <!-- //TODO: conditionner une fois le store dispo -->
     <flex-div class="header__logo">Crypto</flex-div>
     <flex-div justifyContent="space-around" *ngIf="isAuthenticated">
-      <a routerLink="/home" class="header__links" routerLinkActive="header__links--active">Home</a>
-      <a routerLink="/crypto" class="header__links" routerLinkActive="header__links--active">Crypto</a>
+      <a
+        routerLink="/home"
+        class="header__links"
+        routerLinkActive="header__links--active"
+        >Home</a
+      >
+      <a
+        routerLink="/crypto"
+        class="header__links"
+        routerLinkActive="header__links--active"
+        >Crypto</a
+      >
+      <a
+        routerLink="/wallet"
+        class="header__links"
+        routerLinkActive="header__links--active"
+        >Wallet</a
+      >
     </flex-div>
     <flex-div justifyContent="space-around">
-      <a routerLink="/about" class="header__links" routerLinkActive="header__links--active">About</a>
-      <a routerLink="/support" class="header__links" routerLinkActive="header__links--active">Support</a>
-      <a *ngIf="!isAuthenticated" class="header__links" routerLink="/auth/register">Créer un compte</a>
-      <a *ngIf="!isAuthenticated" class="header__links" routerLink="/auth/login">Connexion</a>
-      <a *ngIf="isAuthenticated" class="header__links" (click)="handleDisconnectUser()">Déconnexion</a>
+      <a
+        routerLink="/about"
+        class="header__links"
+        routerLinkActive="header__links--active"
+        >About</a
+      >
+      <a
+        routerLink="/support"
+        class="header__links"
+        routerLinkActive="header__links--active"
+        >Support</a
+      >
+      <a
+        *ngIf="!isAuthenticated"
+        class="header__links"
+        routerLink="/auth/register"
+        >Créer un compte</a
+      >
+      <a *ngIf="!isAuthenticated" class="header__links" routerLink="/auth/login"
+        >Connexion</a
+      >
+      <a
+        *ngIf="isAuthenticated"
+        class="header__links"
+        (click)="handleDisconnectUser()"
+        >Déconnexion</a
+      >
     </flex-div>
   </flex-div>
 </div>
