--- a/src/app/views/crypto/crypto-detail/crypto-detail.component.scss
+++ b/src/app/views/crypto/crypto-detail/crypto-detail.component.scss
@@ -1,4 +1,9 @@
 .header-crypto{
-  margin: 10px;
-  font-size: 30px;
+  margin: 0.625rem;
+  font-size: 1.563rem;
+}
+
+
+.description-crypto{
+    margin : 6.25rem;
 }
