--- a/src/app/components/crypto/crypto-card/crypto-card.component.html
+++ b/src/app/components/crypto/crypto-card/crypto-card.component.html
@@ -13,7 +13,9 @@
           <p>{{ crypto.abbreviation }}</p>
         </flex-div>
       </flex-div>
-      <p>{{ crypto.eur_price }}€</p>
+      <flex-div direction="row" >
+        <p>{{ crypto.eur_price }}€</p>
+      </flex-div>
     </flex-div>
   </lib-card>
 
