--- a/src/app/components/crypto/crypto-card/crypto-card.component.html
+++ b/src/app/components/crypto/crypto-card/crypto-card.component.html
@@ -1,4 +1,4 @@
-<lib-card class="crypto-card">
+<lib-card class="crypto-card" elevation="sm" color="raisin" [width]="width">
     <flex-div
       *ngIf="crypto"
       justifyContent="space-between"
