--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -23,7 +23,7 @@
   >
     <flex-div class="favorite__wrapper" direction="column">
       <flex-div>
-        <p>Favorite</p>
+        <p>Favoris</p>
       </flex-div>
 
       <flex-div
