--- a/src/app/views/wallet/wallet.component.html
+++ b/src/app/views/wallet/wallet.component.html
@@ -4,12 +4,18 @@
     label="Acheter"
     (handleClick)="openDialog('BUY')"
     class="wallet__action"
+    buttonType="primary"
   ></lib-button>
   <lib-button
     size="lg"
     label="Vendre"
     (handleClick)="openDialog('SELL')"
     class="wallet__action"
+    buttonType="primary"
   ></lib-button>
 </flex-div>
-<lib-datatable [headers]="headers" [data]="data"></lib-datatable>
+<lib-datatable
+  [headers]="headers"
+  [data]="data"
+  color="tertiary"
+></lib-datatable>
